Patch for Jira issue XERCESC-1390.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@176397 13f79535-47bb-0310-9956-ffa450edef68